# px4_controller

./: README.md
control_msgs/: CMakeLists.txt  package.xml
control_msgs/msg/: FlatTarget.msg  RollPitchTarget.msg
controllers/: CMakeLists.txt  package.xml
controllers/config/: velocity_layout.xml
controllers/include/controllers/: controller.h  controller_class.h  eth_quat_controller.h  math_operations.h  upenn_controller.h
controllers/include/geometric_controller/: geometric_controller.h
controllers/launch/: config_file.rviz  sitl_quad_flip.launch  sitl_trajectory_track_circle.launch  sitl_trajectory_track_lamniscate.launch  sitl_trajectory_track_poly.launch
controllers/src/: controller.cpp  controller_class.cpp  controller_node.cpp  eth_quat_controller.cpp  geometric_controller.cpp  math_operations.cpp  upenn_controller.cpp
trajectory_pub/: CMakeLists.txt  package.xml
trajectory_pub/include/trajectory_publisher/: eth_trajectory.h  flip_trajectory.h  gap_traverse.h  polynomialtrajectory.h  shapetrajectory.h  trajectory.h  trajectoryPublisher.h
trajectory_pub/launch/: trajectory_publisher.launch
trajectory_pub/src/: eth_trajectory.cpp  flip_node.cpp  flip_trajectory.cpp  gap_traverse.cpp  polynomialtrajectory.cpp  shapetrajectory.cpp  trajectoryPublisher.cpp  trajectoryPublisher_node.cpp
